--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express": "^4.17.2",
     "joi": "^17.6.0",
     "method-override": "^3.0.0",
-    "mongoose": "^6.1.7"
+    "mongoose": "^6.1.7",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   }
 }
