--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.2",
+    "helmet": "^5.0.2",
     "joi": "^17.6.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.1.7",
