--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.2",
     "helmet": "^5.0.2",
     "joi": "^17.6.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.1.7",
+    "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
   }
